# axum-yew

./: Cargo.toml  README.md  bacon.toml  rustfmt.toml
backend/: Cargo.toml
backend/http/: root.http
backend/migrations/: 20260618133145_uuid-id.down.sql  20260618133145_uuid-id.up.sql  20260618140946_timestamps.down.sql
backend/src/: app.rs  config.rs  db.rs  lib.rs  main.rs  product.rs
backend/src/handlers/: mod.rs  product.rs
migrations/: 20260601234830_init.sql  20260618140946_timestamps.up.sql
src/: app.rs  app_state.rs  config.rs  db.rs  lib.rs  main.rs  product.rs
src/handlers/: mod.rs  product.rs
