[package]
name = "axum-yew"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tracing = { version = "0.1.44", features = ["max_level_debug"] }
tracing-subscriber = "0.3.23"
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "tls-native-tls", "macros"] }
anyhow = "1.0.102"
