[workspace]
members = ["backend", "frontend"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tracing = { version = "0.1.44", features = ["max_level_debug"] }
tracing-subscriber = "0.3.23"
serde = { version = "1.0.228", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "1.23.3", features = ["serde"] }
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
garde = { version = "0.23.0", features = ["derive", "url"] }
