[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
dotenv.workspace = true
uuid.workspace = true
anyhow.workspace = true
chrono.workspace = true
garde.workspace = true
axum = { version = "0.8.9", features = ["macros"] }
tower-http = { version = "0.6.11", features = ["cors", "timeout", "trace"] }
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  "postgres",
  "tls-rustls",
  "macros",
  "uuid",
  "chrono",
] }
